Creato con Colaboratory

--- a/R_code_time_series.ipynb
+++ b/R_code_time_series.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_time_series.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMaAoxNvq3ynJyTj/PGl/89"
+      "authorship_tag": "ABX9TyNkbHWRW+0/CoenT0B2clju"
     },
     "kernelspec": {
       "name": "ir",
@@ -71,7 +71,7 @@
       },
       "source": [
         "The [library](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/library) function is used to load previously installed packages.\n",
-        "With the [lapply](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/lapply) function we apply the `library` function to all elements of the vector that contains the package names."
+        "With the [lapply](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/lapply) function we apply the `library()` function to all elements of the vector that contains the package names."
       ]
     },
     {
@@ -174,7 +174,7 @@
         "id": "958l56_GGk1Q"
       },
       "source": [
-        "The code above is somewhat redundant. We can use recursive functions like [lapply](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/lapply) to apply a certain function (in this case the `raster` function) to a list of objects (for example our images of Greenland).\n",
+        "The code above is somewhat redundant. We can use recursive functions like [lapply](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/lapply) to apply a certain function (in this case the `raster()` function) to a list of objects (for example our images of Greenland).\n",
         "Before doing this we create a list containing our images with the [list.files](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/list.files) function."
       ]
     },
@@ -217,6 +217,7 @@
         "id": "ulOVVfBb-5XC"
       },
       "source": [
+        "### Multi-temporal images\n",
         "Individual bands can be combined into a single image by assigning individual layers or bands to one of the three color channels (red, green and blue). \n",
         "The [plotRGB](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/plotRGB) function can be used to make \"true (or false) color images\" from multi-band satellite images.\n",
         "In this case, the resulting color tone in the image will be linked to the combination of the different LST values for the years assigned to the three RGB bands.\n",
@@ -259,10 +260,10 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "peKz4_WvpVhO"
+        "id": "Efd9YK-dQaI7"
       },
       "source": [
-        ""
+        "A RasterStack object can be easily represented with the [levelplot](https://www.rdocumentation.org/packages/rasterVis/versions/0.50.1/topics/levelplot-methods) function of the `\"rasterVis\"` package. The `levelplot()` function allows you to create a multi-frame image with a box for each level."
       ]
     },
     {
@@ -299,19 +300,41 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Epfv0rOP6Qrb"
+      },
+      "source": [
+        "### Colour change\n",
+        "Use function [colorRampPalette](https://www.rdocumentation.org/packages/dichromat/versions/1.1/topics/colorRampPalette) to create a continuous color scale divided into `n` levels."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "WMxZdJA12nzQ"
       },
       "source": [
         "cl <- colorRampPalette(c(\"blue\",\"light blue\",\"pink\",\"red\"))(100)\n",
-        "levelplot(TGr, col.regions=cl)\n",
-        "levelplot(TGr,col.regions=cl, names.attr=c(\"July 2000\",\"July 2005\", \"July 2010\", \"July 2015\"))\n",
-        "levelplot(TGr,col.regions=cl, main=\"LST variation in time\",\n",
-        "names.attr=c(\"July 2000\",\"July 2005\", \"July 2010\", \"July 2015\"))"
+        "# assign a title to each image and to the multi frame\n",
+        "levelplot(TGr,\n",
+        "          col.regions=cl, \n",
+        "          # assign a title\n",
+        "          main = \"LST variation in time\",\n",
+        "          # rename each layer of the image\n",
+        "          names.attr = c(\"July 2000\",\"July 2005\", \"July 2010\", \"July 2015\"))"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IjIfoHq-SP_D"
+      },
+      "source": [
+        ""
+      ]
     },
     {
       "cell_type": "code",
