Creato con Colaboratory

--- a/R_code_time_series.ipynb
+++ b/R_code_time_series.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "R_code_time_series.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNkbHWRW+0/CoenT0B2clju"
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMDZAu+tbSrhnIj2Fav4ZIY"
     },
     "kernelspec": {
       "name": "ir",
@@ -175,7 +176,8 @@
       },
       "source": [
         "The code above is somewhat redundant. We can use recursive functions like [lapply](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/lapply) to apply a certain function (in this case the `raster()` function) to a list of objects (for example our images of Greenland).\n",
-        "Before doing this we create a list containing our images with the [list.files](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/list.files) function."
+        "Before doing this we create a list containing our images with the [list.files](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/list.files) function.\n",
+        "L'attributo pattern indica alla funzione quali caratteri comuni sceglire per la selezione delle immagini nella nostra working directory."
       ]
     },
     {
@@ -263,7 +265,7 @@
         "id": "Efd9YK-dQaI7"
       },
       "source": [
-        "A RasterStack object can be easily represented with the [levelplot](https://www.rdocumentation.org/packages/rasterVis/versions/0.50.1/topics/levelplot-methods) function of the `\"rasterVis\"` package. The `levelplot()` function allows you to create a multi-frame image with a box for each level."
+        "A RasterStack object can be easily represented with the [levelplot](https://www.rdocumentation.org/packages/rasterVis/versions/0.50.1/topics/levelplot-methods) function of the `\"rasterVis\"` package. The `levelplot()` function allows you to create a multi-temporal frame with a box for each level."
       ]
     },
     {
@@ -333,7 +335,11 @@
         "id": "IjIfoHq-SP_D"
       },
       "source": [
-        ""
+        "## Time series visualization\n",
+        "Analyze images of Greenland from 1979 to 2007.\n",
+        "Uses the surface temperature values of the \"MODIS\" product. \n",
+        "We get 28 total images (one for each year) that need to be uploaded to Google Colab storage. \n",
+        "Create a collection of images using the `list.files()` function and convert this list into a RasterStack object with the `stack()` function."
       ]
     },
     {
@@ -342,24 +348,23 @@
         "id": "8hC43pksuDfT"
       },
       "source": [
-        "# Melt\n",
         "meltlist <- list.files(pattern=\"melt\")\n",
-        "melt_import <- lapply(meltlist,raster)"
+        "melt_import <- lapply(meltlist,raster)\n",
+        "melt <- stack(melt_import)\n",
+        "# multi-temporal frame\n",
+        "levelplot(melt)"
       ],
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "Eu1EcAK4uA5V"
+        "id": "xnKykXQrcfDD"
       },
       "source": [
-        "melt <- stack(melt_import)\n",
-        "melt"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "### "
+      ]
     },
     {
       "cell_type": "code",
@@ -367,13 +372,22 @@
         "id": "XyTSxiFhuHT1"
       },
       "source": [
-        "levelplot(melt)\n",
         "melt_amount <- melt$X2007annual_melt - melt$X1979annual_melt\n",
         "clb <- colorRampPalette(c(\"blue\",\"white\",\"red\"))(100)\n",
-        "plot(melt_amount, col=clb)\n"
+        "# visualization melt area\n",
+        "plot(melt_amount, col=clb)"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "G7CpnX_Tc7QW"
+      },
+      "source": [
+        ""
+      ]
     },
     {
       "cell_type": "code",
