Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNZxbO3yfgk5g8ReN2R9rDy"
+      "authorship_tag": "ABX9TyOb2u6I1XFkppvdIPkN+Nwe"
     },
     "kernelspec": {
       "name": "ir",
@@ -100,7 +100,7 @@
       "source": [
         "setwd(\"/content\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -110,7 +110,7 @@
       },
       "source": [
         "## Upload file\n",
-        "1. Download the image of the *Parakanã Indigenous Reserve* in the state of Pará (northern region of Brazil) using Landsat [data]() from 2011.\n",
+        "1. Download Landsat images of the [*Parakanã Indigenous Reserve*](https://pib.socioambiental.org/en/Povo:Parakan%C3%A3) in the state of Pará (northern region of Brazil) for the years 1988 and 2011. Use this [link]() to get the data to use in this example.\n",
         "\n",
         "2. On the left side of Google Colab click on the small folder icon named file ⇒ click the Upload icon ⇒ choose the files to upload from your \"Downloads\" folder and click OK. Otherwise, drag your files to Google Colab storage. Now your files are on Google Colab!\n",
         "\n"
@@ -143,7 +143,7 @@
       "source": [
         "p224r63_2011 <- brick(\"p224r63_2011_masked.grd\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
