Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOb2u6I1XFkppvdIPkN+Nwe"
+      "authorship_tag": "ABX9TyOZDv205ZXqj2LHkOJAr7nC"
     },
     "kernelspec": {
       "name": "ir",
@@ -132,7 +132,8 @@
       },
       "source": [
         "## Reading spatial data\n",
-        "To read and view a multilevel object it is common to use the [brick](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/brick) function."
+        "To read and view a multilevel object it is common to use the [brick](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/brick) function.\n",
+        "Select the images already pre-processed for the year 2011."
       ]
     },
     {
@@ -267,7 +268,7 @@
       "source": [
         "Individual bands can also be combined into a single image by assigning individual layers or bands to one of the three color channels (red, green and blue). \n",
         "The [plotRGB](https://www.rdocumentation.org/packages/raster/versions/3.4-5/topics/plotRGB) function can be used to make \"true (or false) color images\" from Landsat and other multi-band satellite images.\n",
-        "In the `plotRGB` function the `stretch` argument increases the contrast of the image through the use of two [methods](http://spatial-analyst.net/ILWIS/htm/ilwisapp/stretch_functionality.htm): \"lin\" or \"hist\".\n"
+        "In the `plotRGB()` function the `stretch` argument increases the contrast of the image through the use of two [methods](http://spatial-analyst.net/ILWIS/htm/ilwisapp/stretch_functionality.htm): \"lin\" or \"hist\".\n"
       ]
     },
     {
