Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOZDv205ZXqj2LHkOJAr7nC"
+      "authorship_tag": "ABX9TyN42JqKLlWkq7JIFxQUFjoJ"
     },
     "kernelspec": {
       "name": "ir",
@@ -302,7 +302,8 @@
       },
       "source": [
         "### Multi-frame images\n",
-        "Using the [par](https://www.rdocumentation.org/packages/graphics/versions/3.6.2/topics/par) function it is possible to set the parameters of the graphic output. Subsequent figures will be drawn in an array on the device by columns `mfcol`, or rows `mfrow`, respectively."
+        "Using the [par](https://www.rdocumentation.org/packages/graphics/versions/3.6.2/topics/par) function it is possible to set the parameters of the graphic output. Subsequent figures will be drawn in an array on the device by columns `mfcol`, or rows `mfrow`, respectively.\n",
+        "We have a multiframe of subplots."
       ]
     },
     {
