Creato con Colaboratory

--- a/R_code_time_series.ipynb
+++ b/R_code_time_series.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_time_series.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOAD7A50mFnQS5L8Q1P0bQp"
+      "authorship_tag": "ABX9TyOnsM+E7UHa5lVc39bRtfc6"
     },
     "kernelspec": {
       "name": "ir",
@@ -265,7 +265,7 @@
         "id": "Efd9YK-dQaI7"
       },
       "source": [
-        "A RasterStack object can be easily represented with the [levelplot](https://www.rdocumentation.org/packages/rasterVis/versions/0.50.1/topics/levelplot-methods) function of the [rasterVis](https://www.rdocumentation.org/packages/rasterVis/versions/0.50.1) package. The `levelplot()` function allows you to create a multi-temporal frame with a box for each level."
+        "A RasterStack object can be easily represented with the [levelplot](https://www.rdocumentation.org/packages/rasterVis/versions/0.50.1/topics/levelplot-methods) function of the [rasterVis](https://www.rdocumentation.org/packages/rasterVis/versions/0.50.1) package. The `levelplot()` function allows you to create a multi-temporal frame with a subplots for each level."
       ]
     },
     {
@@ -396,17 +396,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Pi_PCacwxpOY",
-        "outputId": "375dc6e8-300f-4ff6-ca1d-206625ac0977",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 437
-        }
+        },
+        "id": "Pi_PCacwxpOY",
+        "outputId": "895a57e8-b865-4ec3-f81b-f33e833f98a8"
       },
       "source": [
         "levelplot(melt_amount, col.regions=clb, margin = list(FUN = 'mean'), contour=TRUE)"
       ],
-      "execution_count": 26,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
