--- a/R_code_classification.ipynb
+++ b/R_code_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPA56ctueQ/U50+gkSZ5y/b"
+      "authorship_tag": "ABX9TyPWq+SeoVqCqnNaUcA3MD7K"
     },
     "kernelspec": {
       "name": "ir",
@@ -16,6 +16,19 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WfzIAI-J6TEO"
+      },
+      "source": [
+        "<table class=\"ee-notebook-buttons\" align=\"left\"><td>\n",
+        "<a target=\"_blank\"  href=\"https://colab.research.google.com/drive/1kseAnLcIDHDlO8OyLutzehCQoY41k3Bb#scrollTo=WfzIAI-J6TEO\">\n",
+        "    <img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" /> Run in Google Colab</a>\n",
+        "</td><td>\n",
+        "<a target=\"_blank\"  href=\"https://github.com/biagiominio/Remote_sensing_2021/blob/main/R_code_classification.ipynb\"><img width=32px src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" /> View source on GitHub</a></td></table>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
