Creato con Colaboratory

--- a/R_code_classification.ipynb
+++ b/R_code_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPWq+SeoVqCqnNaUcA3MD7K"
+      "authorship_tag": "ABX9TyPMuQiSQ7+lSiPARpE5oMm1"
     },
     "kernelspec": {
       "name": "ir",
@@ -32,6 +32,100 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "er2BO2Skskxj"
+      },
+      "source": [
+        "url = \"https://www.esa.int/var/esa/storage/images/esa_multimedia/images/2020/07/solar_orbiter_s_first_view_of_the_sun2/22133123-1-eng-GB/Solar_Orbiter_s_first_view_of_the_Sun.png\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "umjYjLBszxpR"
+      },
+      "source": [
+        "library(raster)\n",
+        "library(RStoolbox)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ytHz74T9z53E"
+      },
+      "source": [
+        "so <- brick(\"Solar_Orbiter_s_first_views_of_the_Sun_pillars.jpg\")\n",
+        "so"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PB9Vex7Dz84h"
+      },
+      "source": [
+        "plotRGB(so, 1,2,3, stretch=\"lin\")\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3fN6LEbk0Aqv"
+      },
+      "source": [
+        "soc <- unsuperClass(so, nClasses=3)\n",
+        "plot(soc$map)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-1mW7qta0DtD"
+      },
+      "source": [
+        "soc20 <- unsuperClass(so, nClasses=20)\n",
+        "plot(soc20$map,col=cl)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "e_9rbl7S0GBm"
+      },
+      "source": [
+        "cl <- colorRampPalette(c('yellow','black','red'))(100)\n",
+        "plot(soc20$map,col=cl)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hkdNeOHn0MDb"
+      },
+      "source": [
+        "Download Solar Orbiter data and proceed further!\n",
+        "Grand Canyon\n",
+        "https://landsat.visibleearth.nasa.gov/view.php?id=80948\n",
+        "When John Wesley Powell led an expedition down the Colorado River and through the Grand Canyon in 1869,"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "FvJ0Zbx78ZFA"
       },
       "source": [
@@ -43,10 +137,57 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "er2BO2Skskxj"
+        "id": "4z3POkN40SrK"
       },
       "source": [
-        "url = \"https://www.esa.int/var/esa/storage/images/esa_multimedia/images/2020/07/solar_orbiter_s_first_view_of_the_sun2/22133123-1-eng-GB/Solar_Orbiter_s_first_view_of_the_Sun.png\""
+        "gc <- brick(\"dolansprings_oli_2013088_canyon_lrg.jpg\")\n",
+        "plotRGB(gc, r=1, g=2, b=3, stretch=\"lin\")\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1vNn9R_A0V-M"
+      },
+      "source": [
+        "plotRGB(gc, r=1, g=2, b=3, stretch=\"hist\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rjZL0_gf0Yr8"
+      },
+      "source": [
+        "gcc2 <- unsuperClass(gc, nClasses=2)\n",
+        "gcc2\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "j51sIJpk0a7X"
+      },
+      "source": [
+        "plot(gcc2$map)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GNx8le-U0dNO"
+      },
+      "source": [
+        "gcc4 <- unsuperClass(gc, nClasses=4)\n",
+        "plot(gcc4$map)\n"
       ],
       "execution_count": null,
       "outputs": []
