Creato con Colaboratory

--- a/R_code_classification.ipynb
+++ b/R_code_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPMuQiSQ7+lSiPARpE5oMm1"
+      "authorship_tag": "ABX9TyPoXu13R8DItq6zoyhbNUx4"
     },
     "kernelspec": {
       "name": "ir",
@@ -23,7 +23,7 @@
       },
       "source": [
         "<table class=\"ee-notebook-buttons\" align=\"left\"><td>\n",
-        "<a target=\"_blank\"  href=\"https://colab.research.google.com/drive/1kseAnLcIDHDlO8OyLutzehCQoY41k3Bb#scrollTo=WfzIAI-J6TEO\">\n",
+        "<a target=\"_blank\"  href=\"https://colab.research.google.com/github/biagiominio/Remote_sensing_2021/blob/main/R_code_classification.ipynb\">\n",
         "    <img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" /> Run in Google Colab</a>\n",
         "</td><td>\n",
         "<a target=\"_blank\"  href=\"https://github.com/biagiominio/Remote_sensing_2021/blob/main/R_code_classification.ipynb\"><img width=32px src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" /> View source on GitHub</a></td></table>"
