Creato con Colaboratory

--- a/R_code_time_series.ipynb
+++ b/R_code_time_series.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_time_series.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNtZgXl/HSMdItnzduPnEwF"
+      "authorship_tag": "ABX9TyPVCt+mJT8GhT5dQ1Tr/T1+"
     },
     "kernelspec": {
       "name": "ir",
@@ -59,8 +59,8 @@
         "id": "l10HaqN7AZAT"
       },
       "source": [
-        "pk <- c(\"rgdal\", \"raster\", \"rasterVis\")\n",
-        "install.packages(pk)"
+        "packages <- c(\"rgdal\", \"raster\", \"rasterVis\")\n",
+        "install.packages(packages )"
       ],
       "execution_count": null,
       "outputs": []
@@ -81,7 +81,7 @@
         "id": "PTJfZZmyt8Gi"
       },
       "source": [
-        "lapply(pk, library, character.only = TRUE)"
+        "lapply(packages , library, character.only = TRUE)"
       ],
       "execution_count": null,
       "outputs": []
@@ -103,7 +103,7 @@
       "source": [
         "setwd(\"/content\")"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "lst_2010 <- raster(\"lst_2010.tif\")\n",
         "lst_2015 <- raster(\"lst_2015.tif\")"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -189,7 +189,7 @@
         "rlist <- list.files(pattern=\"lst\")\n",
         "import <- lapply(rlist, raster)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,7 +239,7 @@
       "source": [
         "plotRGB(TGr, r=2, g=3, b=4, stretch=\"Lin\")"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -356,7 +356,7 @@
         "pdf(\"/content/Melt_frame.pdf\")\n",
         "levelplot(melt)"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -406,7 +406,7 @@
       "source": [
         "levelplot(melt_amount, col.regions=clb, margin = list(FUN = 'mean'), contour=TRUE)"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
