Creato con Colaboratory

--- a/R_code_classification.ipynb
+++ b/R_code_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOzkKasp9obbem5dU5ep/wO"
+      "authorship_tag": "ABX9TyMK9+5vW8CRglTFj3Uwa3fh"
     },
     "kernelspec": {
       "name": "ir",
@@ -101,11 +101,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "ytHz74T9z53E",
-        "outputId": "f08bc75e-8d41-41c1-a6f3-16c5722722a1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
-        }
+        },
+        "outputId": "f08bc75e-8d41-41c1-a6f3-16c5722722a1"
       },
       "source": [
         "solar_orbiter <- brick(\"Solar_Orbiter.jpg\")\n",
@@ -161,11 +161,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "PB9Vex7Dz84h",
-        "outputId": "2809180f-e1d8-4fe3-eafa-1fd359749db0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 437
-        }
+        },
+        "outputId": "2809180f-e1d8-4fe3-eafa-1fd359749db0"
       },
       "source": [
         "plotRGB(solar_orbiter, 1,2,3, stretch=\"lin\")"
@@ -217,7 +217,9 @@
         "id": "7Y1JQAcB8WDz"
       },
       "source": [
-        "### K-means"
+        "### K-means\n",
+        "* seed.save\n",
+        "* dev.off"
       ]
     },
     {
@@ -246,12 +248,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rc66aGeS9qj8",
-        "outputId": "791fa8ba-c4fa-491d-db24-60639a42828e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        }
+        },
+        "id": "rc66aGeS9qj8",
+        "outputId": "791fa8ba-c4fa-491d-db24-60639a42828e"
       },
       "source": [
         "pdf(file = '/content/my_plot.pdf')\n",
@@ -329,11 +331,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "rjZL0_gf0Yr8",
-        "outputId": "5db06c04-3274-44a5-c94e-6093ef9db847",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 221
-        }
+        },
+        "outputId": "5db06c04-3274-44a5-c94e-6093ef9db847"
       },
       "source": [
         "gcc2 <- unsuperClass(gc, nClasses=2)\n",
@@ -369,11 +371,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "j51sIJpk0a7X",
-        "outputId": "c7b5893d-5eea-4b8e-904b-76be4fca5fb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 437
-        }
+        },
+        "outputId": "c7b5893d-5eea-4b8e-904b-76be4fca5fb8"
       },
       "source": [
         "plot(gcc2$map)"
