Creato con Colaboratory

--- a/R_code_time_series.ipynb
+++ b/R_code_time_series.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_time_series.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPVCt+mJT8GhT5dQ1Tr/T1+"
+      "authorship_tag": "ABX9TyOTqjl0VhL9Sp8soPdS7pfq"
     },
     "kernelspec": {
       "name": "ir",
@@ -49,7 +49,7 @@
         "## Install R packages\n",
         "The [install.packages](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/install.packages) function is used to download and install packages from CRAN-like repositories.\n",
         "To install multiple packages at the same time, you define a vector that contains the names of the packages to be installed.\n",
-        "The [raster](https://) package defines classes and methods for spatial raster data access and manipulation. The [rasterVis](https://) package complements raster providing a set of methods for enhanced visualization and interaction.\n",
+        "The [raster](https://www.rdocumentation.org/packages/raster/versions/3.4-10) package defines classes and methods for spatial raster data access and manipulation. The [rasterVis](https://www.rdocumentation.org/packages/rasterVis/versions/0.50.2) package complements raster providing a set of methods for enhanced visualization and interaction.\n",
         "The [rgdal](https://www.rdocumentation.org/packages/rgdal/versions/1.5-23) package provides links to the [GDAL](https://gdal.org/) library (Geospatial Data Abstraction Library) and access to projection/transformation operations from the \"PROJ\" library.\n"
       ]
     },
