Creato con Colaboratory

--- a/R_code_classification.ipynb
+++ b/R_code_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMK9+5vW8CRglTFj3Uwa3fh"
+      "authorship_tag": "ABX9TyOaJbwi/ZWx/shenMUB84e9"
     },
     "kernelspec": {
       "name": "ir",
@@ -32,14 +32,38 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "_UkpOdo-8YBw"
+      },
+      "source": [
+        "# Image Classification\n",
+        "The classification of remotely sensed images consists in associating each pixel of the image with a specific class or category (e.g. grassland, forest, water, soil, etc.).\n",
+        "Identification occurs through a process in which the degree of spectral similarity or association is high between pixels of the same category and low between pixels of distinct categories.\n",
+        "> For this first application of the classification methods we use two sets of images: the recent images of [Solar Orbiter](http://www.esa.int/Science_Exploration/Space_Science/Solar_Orbiter) and the Landsat images of the [Grand Canyon](https://landsat.visibleearth.nasa.gov/view.php?id=80948)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sIBZqCaW5Xuz"
+      },
+      "source": [
+        "solar_orbiter_url <- \"https://www.esa.int/var/esa/storage/images/esa_multimedia/images/2020/07/solar_orbiter_s_first_views_of_the_sun4/22133246-1-eng-GB/Solar_Orbiter_s_first_views_of_the_Sun.jpg\"\n",
+        "grand_canyon_url <- \"https://eoimages.gsfc.nasa.gov/images/imagerecords/80000/80948/dolansprings_oli_2013088_canyon_lrg.jpg\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "aUjXwyfVb_jM"
       },
       "source": [
         "## Install R packages\n",
         "The [install.packages](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/install.packages) function is used to download and install packages from CRAN-like repositories.\n",
         "To install multiple packages at the same time, you define a vector that contains the names of the packages to be installed.\n",
-        "The [raster](https://) package defines classes and methods for spatial raster data access and manipulation. The [rasterVis](https://) package complements raster providing a set of methods for enhanced visualization and interaction.\n",
-        "The [rgdal](https://www.rdocumentation.org/packages/rgdal/versions/1.5-23) package provides links to the [GDAL](https://gdal.org/) library (Geospatial Data Abstraction Library) and access to projection/transformation operations from the \"PROJ\" library.\n"
+        "The [raster](https://www.rdocumentation.org/packages/raster/versions/3.4-10) package defines classes and methods for spatial raster data access and manipulation. \n",
+        "[RStoolbox](https://www.rdocumentation.org/packages/RStoolbox/versions/0.2.6) is an package providing a wide range of tools for your every-day remote sensing processing needs. The available tool-set covers many aspects for remote sensing image processing and analysis such as calculating spectral indices, principal component transformation, unsupervised and supervised classification or fractional cover analyses."
       ]
     },
     {
@@ -76,14 +100,24 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "sIBZqCaW5Xuz"
+        "id": "CWcyue8oJuZe"
       },
       "source": [
-        "download.file(\"https://www.esa.int/var/esa/storage/images/esa_multimedia/images/2020/07/solar_orbiter_s_first_views_of_the_sun4/22133246-1-eng-GB/Solar_Orbiter_s_first_views_of_the_Sun.jpg\", \"Solar_Orbiter.jpg\")"
+        "The [download.file()](https://www.rdocumentation.org/packages/utils/versions/3.6.2/topics/download.file) function can be used to download a file from the Internet. Set the `url` argument to indicate the resource to download and `destfile` a character string with which the downloaded file is named."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2VwQSAU5NkR_"
+      },
+      "source": [
+        "download.file(solar_orbiter_url, \"Solar_Orbiter.jpg\")\n",
+        "download.file(grand_canyon_url, \"Grand_Canyon.jpg\")"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,39 +134,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ytHz74T9z53E",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 170
-        },
-        "outputId": "f08bc75e-8d41-41c1-a6f3-16c5722722a1"
+        "id": "ytHz74T9z53E"
       },
       "source": [
         "solar_orbiter <- brick(\"Solar_Orbiter.jpg\")\n",
         "solar_orbiter"
       ],
-      "execution_count": 74,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "class      : RasterBrick \n",
-              "dimensions : 2150, 3567, 7669050, 3  (nrow, ncol, ncell, nlayers)\n",
-              "resolution : 1, 1  (x, y)\n",
-              "extent     : 0, 3567, 0, 2150  (xmin, xmax, ymin, ymax)\n",
-              "crs        : NA \n",
-              "source     : /content/Solar_Orbiter.jpg \n",
-              "names      : Solar_Orbiter.1, Solar_Orbiter.2, Solar_Orbiter.3 \n",
-              "min values :               0,               0,               0 \n",
-              "max values :             255,             255,             255 \n"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -170,7 +179,7 @@
       "source": [
         "plotRGB(solar_orbiter, 1,2,3, stretch=\"lin\")"
       ],
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -208,7 +217,7 @@
       "source": [
         "cl <- colorRampPalette(c('yellow','black','red'))(300)"
       ],
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -242,7 +251,7 @@
       "source": [
         "solar_orbiter_class5 <- unsuperClass(solar_orbiter, nClasses=5)"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -260,7 +269,7 @@
         "plot(solar_orbiter_class5$map, col=cl, axes= FALSE)\n",
         "dev.off()"
       ],
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -292,17 +301,6 @@
         "https://landsat.visibleearth.nasa.gov/view.php?id=80948\n",
         "When John Wesley Powell led an expedition down the Colorado River and through the Grand Canyon in 1869,"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "d5YRZyZK-5KJ"
-      },
-      "source": [
-        "download.file(\"https://eoimages.gsfc.nasa.gov/images/imagerecords/80000/80948/dolansprings_oli_2013088_canyon_lrg.jpg\", \"Grand_Canyon.jpg\")"
-      ],
-      "execution_count": 49,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -341,7 +339,7 @@
         "gcc2 <- unsuperClass(gc, nClasses=2)\n",
         "gcc2"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -380,7 +378,7 @@
       "source": [
         "plot(gcc2$map)"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
