Creato con Colaboratory

--- a/R_code_classification.ipynb
+++ b/R_code_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQBOIOi+cPbuj6tkut6t3+"
+      "authorship_tag": "ABX9TyMBGr12rC+G3/eCUCWpgwSp"
     },
     "kernelspec": {
       "name": "ir",
@@ -378,6 +378,15 @@
       ],
       "execution_count": 34,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6qHPXo8l_TEP"
+      },
+      "source": [
+        "In the resulting map, streams, lakes and wetlands are blue as are the shadows (class one). Clouds belong to the third gray class, and plateaus covered with vegetation or with darker soils are red and black."
+      ]
     }
   ]
 }
