--- a/R_code_classification.ipynb
+++ b/R_code_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_classification.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMBGr12rC+G3/eCUCWpgwSp"
+      "authorship_tag": "ABX9TyOoqXGCnDYZ3mBqDgSE05WN"
     },
     "kernelspec": {
       "name": "ir",
@@ -359,11 +359,7 @@
       },
       "source": [
         "### Export images\n",
-        "The [pdf](https://www.rdocumentation.org/packages/grDevices/versions/3.6.2/topics/pdf) function starts the graphics device driver for producing PDF graphics. \n",
-        "The pdf file will be named in the path (function argument) and saved on Google Colab. Click the folder icon to view all files temporarily uploaded to the machine (click the pdf name in the list to download and view the image). \n",
-        "Now you can zoom in and explore each subplot better!\n",
-        "\n",
-        "N.B. always use the [dev.off](https://www.rdocumentation.org/packages/imguR/versions/0.1.5/topics/dev.off) function to manage the correct closing and loading of the graphics space."
+        "In the resulting map, bodies of water and wetlands are blue as well as shadows (class one). Clouds belong to the third gray class, and plateaus covered with vegetation or with darker soils are red and black."
       ]
     },
     {
@@ -382,11 +378,26 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6qHPXo8l_TEP"
+        "id": "SonVaReWz2RY"
       },
       "source": [
-        "In the resulting map, streams, lakes and wetlands are blue as are the shadows (class one). Clouds belong to the third gray class, and plateaus covered with vegetation or with darker soils are red and black."
+        "Compare the initial image with the resulting thematic map.\n",
+        "Using the [par](https://www.rdocumentation.org/packages/graphics/versions/3.6.2/topics/par) function it is possible to set the parameters of the graphic output and create a multi frame of images."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xv4YVxKdzc5k"
+      },
+      "source": [
+        "pdf(file = '/content/grand_canyon_vs_class6.pdf')\n",
+        "plotRGB(grand_canyon, r=1, g=2, b=3, stretch=\"lin\")\n",
+        "plot(grand_canyon_class6$map, col=cl2, axes= FALSE)\n",
+        "dev.off()"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
