Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN42JqKLlWkq7JIFxQUFjoJ"
+      "authorship_tag": "ABX9TyMVtLiwa5GlW7kg8XfxdrFw"
     },
     "kernelspec": {
       "name": "ir",
@@ -173,7 +173,7 @@
         "id": "z0d4dIXNzi16"
       },
       "source": [
-        "### Lansat bands:\n",
+        "### Lansat bands\n",
         "B1 = *Blue*; \n",
         "B2 = *Green*;\n",
         "B3 = *Red*;\n",
