Creato con Colaboratory

--- a/R_code_remote_sensing_first.ipynb
+++ b/R_code_remote_sensing_first.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "R_code_remote_sensing_first.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMVtLiwa5GlW7kg8XfxdrFw"
+      "authorship_tag": "ABX9TyNUDJDhvtlihAo0XluPH6i0"
     },
     "kernelspec": {
       "name": "ir",
@@ -364,7 +364,9 @@
       "source": [
         "### Export images\n",
         "The [pdf](https://www.rdocumentation.org/packages/grDevices/versions/3.6.2/topics/pdf) function starts the graphics device driver for producing PDF graphics. \n",
-        "The pdf file will be named in the path (function argument) and saved on Google Colab. Click the folder icon to view all files temporarily uploaded to the machine (click the pdf name in the list to download and view the image)."
+        "The pdf file will be named in the path (function argument) and saved on Google Colab. Click the folder icon to view all files temporarily uploaded to the machine (click the pdf name in the list to download and view the image).\n",
+        "\n",
+        "N.B. always use the [dev.off](https://www.rdocumentation.org/packages/imguR/versions/0.1.5/topics/dev.off) function to manage the correct closing and loading of the graphics space."
       ]
     },
     {
@@ -376,7 +378,8 @@
         "pdf(\"/content/RGB_MAP.pdf\")\n",
         "par(mfrow=c(2,1))\n",
         "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"Lin\")\n",
-        "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"hist\")"
+        "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"hist\")\n",
+        "dev.off()"
       ],
       "execution_count": null,
       "outputs": []
@@ -392,7 +395,8 @@
         "par(mfrow=c(3,1))\n",
         "plotRGB(p224r63_2011, r=3, g=2, b=1, stretch=\"Lin\")\n",
         "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"Lin\")\n",
-        "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"hist\")"
+        "plotRGB(p224r63_2011, r=3, g=4, b=2, stretch=\"hist\")\n",
+        "dev.off()"
       ],
       "execution_count": null,
       "outputs": []
